; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_rcc.c_RCC_ADCCLKConfig.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_rcc.c_RCC_ADCCLKConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@RCC_CFGR_ADCPRE = common dso_local global i32 0, align 4
@RCC = common dso_local global %struct.TYPE_2__* null, align 8
@RCC_CFGR3_ADCSW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RCC_ADCCLKConfig(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @IS_RCC_ADCCLK(i32 %3)
  %5 = call i32 @assert_param(i32 %4)
  %6 = load i32, i32* @RCC_CFGR_ADCPRE, align 4
  %7 = xor i32 %6, -1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, %7
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %2, align 4
  %13 = and i32 %12, 65535
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = or i32 %16, %13
  store i32 %17, i32* %15, align 4
  %18 = load i32, i32* @RCC_CFGR3_ADCSW, align 4
  %19 = xor i32 %18, -1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 4
  %24 = load i32, i32* %2, align 4
  %25 = ashr i32 %24, 16
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, %25
  store i32 %29, i32* %27, align 4
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_RCC_ADCCLK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
